[package]
name = "regions"
version = "0.1.0"
authors = ["elpinal <elpinal@users.noreply.github.com>"]
edition = "2018"

[dependencies]
failure = "0.1.5"

[dev-dependencies]
quickcheck = "0.8.0"
rand = "0.6.4"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]
